proxy/envoy.yaml
static_resources:
  listeners:
  - name: listener_https
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress
          route_config:
            name: local_route
            virtual_hosts:
            - name: minio-console
              domains: ["minio-console.*"]
              routes:
              - match: 
                  prefix: "/"
                route:
                  cluster: minio-console
            - name: minio
              domains: ["minio.*"]
              routes:
              - match: 
                  prefix: "/"
                route:
                  cluster: minio
            - name: bimplatform
              domains: ["bim.*","bimplatform.*"]
              routes:
              - match: 
                  prefix: "/"
                route:
                  cluster: bimplatform
          http_filters:
          - name: envoy.filters.http.router
      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/etc/envoy/certs/fullchain.crt"
              private_key:
                filename: "/etc/envoy/certs/private.pem"
                
  clusters:
  - name: bimplatform
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: bimplatform
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: 
                address: bimplatform
                port_value: 8080

  - name: minio
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: minio
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: minio
                port_value: 9000

  - name: minio-console
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: minio-console
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: minio
                port_value: 9001
